# Mednager

./: Dockerfile  README.md  alembic.ini  app.py  default-requests.json  docker-compose.yaml  pyproject.toml
backend/: .gitignore  Dockerfile  app.py  pyproject.toml
backend/alembic/versions/: 5e94b2076a15_create_medical_prescription_table.py  8bf157162217_create_doctor_medical_unit_table.py
backend/config/: consts.py  populate.py
backend/domain/entities/: doctor.py  employee.py  exam.py  medical_appointment.py  medical_prescription.py  medical_unit.py  patient.py  plan.py  problem.py  speciality.py
backend/domain/repositories/: doctor_repository.py  employee_repository.py  exam_repository.py  medical_appointment_repository.py  medical_prescription_repository.py  medical_unit_repository.py  patient_repository.py  plan_repository.py  problem_repository.py  speciality_repository.py
backend/domain/use_cases/: create_employee.py  create_exam.py  create_medical_appointment.py  create_medical_prescription.py  create_patient.py  create_problem.py  find_doctors.py  find_medical_units.py  find_plans.py  find_specialities.py  login_employee.py  select_plan.py
backend/infra/: routes.py
backend/infra/controllers/: exam_controller.py  medical_prescription_controller.py  medical_unit_controller.py  patient_controller.py  plan_controller.py
backend/infra/entities/: doctor.py  employee.py  exam.py  medical_unit.py  patient.py  plan.py  speciality.py
backend/infra/repositories/: doctor_repository.py  employee_repository.py  (+6 more)
backend/scripts/: start_app.sh
(+104 files in other folders)
